# SUPER

mars_uav_sim/perfect_drone_sim/config/: real_stope.yaml
mars_uav_sim/perfect_drone_sim/rviz/: stope.rviz
mission_planner/: CMakeLists.txt
mission_planner/config/: waypoint.yaml
mission_planner/data/: real_stope_coverage.txt
mission_planner/launch/: benchmark_low_speed.launch  real_stope_exploration_auto.launch  real_stope_explore.launch  real_stope_interactive.launch  real_stope_interactive_with_goals.launch
mission_planner/scripts/: exploration_manager.py  interactive_goal_pub.py
rog_map/include/rog_map_ros/: rog_map_ros1.hpp  rog_map_ros2.hpp
rog_map/src/rog_map/: prob_map.cpp
scripts/: analyze_map.py  convert_las_to_pcd.py  generate_mine_mission.py  generate_real_stope_mission.py  generate_stope.py
super_planner/config/: real_stope.yaml  static_low_speed.yaml
super_planner/include/path_search/: astar.h
